--- a/Front/src/compenents/Chat/Chat.css
+++ b/Front/src/compenents/Chat/Chat.css
@@ -189,10 +189,10 @@
 	/* background-image: url("./windows-xp-wallpaper-bliss.jpg"); */
 }
 
-.individual-convo-big-container {
+.individual-convo-main-container {
     height: 50%;
     width: 50%;
-    background-color: white;
+    background-color: #e4f1f8;
     display: flex;
     flex-direction: column;
     border-radius: 5px;
@@ -200,15 +200,55 @@
 
 .Navbar-individual-convo {
     width: 100%;
+    height: 100%;
+    background-color: #eaf1fc;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+}
+
+.to-who {
+    width: 100%;
+    height: 20%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background-color: goldenrod;
+}
+
+.receiver-status {
+    width: 98%;
+    height: 18%;
+    border: solid;
+    border-width: 1px;
+    border-color: grey;
+    margin-left: 1%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    background-color: #fffedc;
+}
+
+.text-already-sent {
+    width: 100;
+    height: 60%;
+    background-color: salmon;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.navbar-conv {
     height: 13%;
-    background-color: #45a049;
+    width: 100%;
+    background-color: skyblue;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .receiver-big-container { 
-    height: 40%;
+    height: 50%;
     width: 100%;
-    background-color: pink;
+    background-color: #e4f1f8;
     display: grid;
+
     grid-template-columns: repeat(50, 2%);
 	grid-template-rows: repeat(50, 2%);
 }
@@ -221,20 +261,102 @@
     grid-row-end: 48;
     grid-column-start: 2;
     grid-column-end: 33;
-    background-color: red;
+    border: solid;
+    border-color: grey;
+    border-width: 1px;;
+    background-color: #fefdff;
 }
 
-.profile-pic-reveiver {
+.profile-pic-reveiver-container {
     border-radius: 5px;
     grid-row-start: 3;
     grid-row-end: 35;
-    grid-column-start: 34;
-    grid-column-end: 48;
+    grid-column-start: 35;
+    grid-column-end: 49;
     /* margin-left: 20%;
     margin-right: 10%; */
     /* width: 30%;
     height: 60%; */
     background-color: #2c2b5c;
+    display: grid;
+    grid-template-columns: repeat(50, 2%);
+	grid-template-rows: repeat(50, 2%);
+}
+
+.profile-pic-receiver {
+    background-color: #e4f319;
+    grid-row-start: 2;
+    grid-row-end: 40;
+    grid-column-start: 5;
+    grid-column-end: 45;
+    border-radius: 5px;
+    border: solid;
+    border-color: grey;
+    /* width: 100%;
+    height: 80%; */
+}
+
+.emitter-big-container {
+    height: 37%;
+    width: 100%;
+    /* background-color: green; */
+    display: grid;
+    grid-template-columns: repeat(50, 2%);
+    grid-template-rows: repeat(50, 2%);
+}
+
+.container-write-text {
+    grid-row-start: 3;
+    grid-row-end: 49;
+    grid-column-start: 2;
+    grid-column-end: 33;
+    background-color: blue;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+.upper-part-write-text {
+    width: 100%;
+    height: 20%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background-color: white;
+}
+
+.middle-part-write-text {
+    width: 100%;
+    height: 60%;
+    background-color: black;
+}
+
+.bottom-part-write-text {
+    width: 100%;
+    height: 20%;
+    border-bottom-left-radius: 5px;;
+    border-bottom-right-radius: 5px;;
+    background-color: pink;
+} 
+
+.profile-pic-container-emitter {
+    grid-row-start: 3;
+    grid-row-end: 48;
+    grid-column-start: 35;
+    grid-column-end: 49;
+    background-color: yellow;
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: repeat(50, 2%);
+	grid-template-rows: repeat(50, 2%);
+}
+
+.profile-pic-last-block {
+    grid-row-start: 2;
+    grid-row-end: 40;
+    grid-column-start: 5;
+    grid-column-end: 45;
+    background-color: forestgreen;
+    border-radius: 5px;;
 }
 
 .Footer {
