--- a/Front/src/compenents/Chat/ConversationListHeader/ConversationListHeader.css
+++ b/Front/src/compenents/Chat/ConversationListHeader/ConversationListHeader.css
@@ -1,4 +1,24 @@
 /* 5% 3% 17% * 0.68  */
+body {
+    font-size: 1vw; /* Adjust base font size for responsiveness */
+}
+
+
+.transcendance-messenger {
+    flex: 1; /* Take available space */
+    font-family: 'YourCustomFont', Tahoma, Geneva, Verdana, sans-serif; /* Use your custom font */
+    font-size: 1rem; /* Adjust font size as needed */
+    font-weight: bold; /* Adjust font weight as needed */
+    color:white;
+  }
+  
+  .right-icons {
+    display: flex;
+    align-items: center; /* Center vertically */
+  }
+  .right-icons li {
+    margin-left: 10px; /* Adjust the spacing as needed */
+  }
 
 
 .conversations-list-header {
@@ -37,10 +57,18 @@
 }
 
 .top-conversation-list li {
-    padding:0;
+    padding: 0;
     margin: 1px 1px 1px 1px;
     /* height: 1vh; */
 }
+
+.top-conversation-list img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+}
+
 
 .option-conversation-list {
     height: 12%;
@@ -62,10 +90,14 @@
     padding-left: 7px;
 }
 
+.option-conversation-list li:hover {
+    background-color: #333; /* Dark background color on hover */
+    color: white; /* White text color on hover */
+}
 .topbar-conversation-list {
     height: 68%;
-    background: linear-gradient(180deg, rgba(182,209,238,1) 0%, rgba(176,212,249,1) 3%,
-    rgba(248,248,250,1) 20%, rgba(232,238,242,1) 74%, rgba(224,234,239,1) 100%);
+    background: linear-gradient(180deg, rgba(182, 209, 238, 1) 0%, rgba(176, 212, 249, 1) 3%,
+            rgba(248, 248, 250, 1) 20%, rgba(232, 238, 242, 1) 74%, rgba(224, 234, 239, 1) 100%);
     border-radius: 5px;
     box-shadow: 1px 1px 1px grey;
     margin: 1px 2px 2px 2px;
@@ -77,7 +109,7 @@
 .profile-pic-messenger {
     grid-row-start: 13;
     grid-row-end: 42;
-    grid-column-start:2;
+    grid-column-start: 2;
     grid-column-end: 9;
     background-color: black;
     border-radius: 5px;
@@ -86,12 +118,52 @@
 .user-informations {
     grid-row-start: 13;
     grid-row-end: 42;
-    grid-column-start:12;
+    grid-column-start: 12;
     grid-column-end: 48;
     /* background-color: black; */
 }
 
-.username-info {
+/* .username-info {
     background-color: red;
     height:10%;
+    grid-row-start: 10;
+    grid-row-end: 17;
+    grid-column-start: 30;
+    grid-column-end: 30;
 }
+
+.status-online { 
+    grid-row-start: 20;
+    grid-row-end: 30;
+    grid-column-start: 30;
+    grid-column-end: 40;
+} */
+
+.conversations-list-header {
+    /* Your other styles */
+}
+
+/* Style for h2 and h3 inside .username-info */
+.username-info .status-online {
+    font-size: 1rem;
+    color: green;
+    margin-left: 5px;
+    /* To separate the name from the status */
+}
+
+/* .status-edit {
+    font-size: 0.8rem;
+    color: grey;
+    margin-top: 3px; /* Adjust as needed to control the spacing
+    width: 50px;
+    height: 50px;
+    background-color: black;
+  } */
+
+  /* Style for the "status to Edit" */
+.status-edit {
+    font-size: 0.8rem;
+    color: grey;
+    margin-top: 3px; /* Adjust as needed */
+    display: inline; /* Display on the same line */
+  }
