--- a/Front/src/compenents/Chat/FooterMenu/FooterMenu.css
+++ b/Front/src/compenents/Chat/FooterMenu/FooterMenu.css
@@ -2,29 +2,43 @@
     position: fixed;
     height: 3vh;
     width: 100vw;
-    /* display: inline; */
-    background-color:#0256ef;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    background-color: #0256ef;
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
 
 .footer-first-element {
-    background: linear-gradient(180deg, rgba(0,235,67,1) 0%, rgba(0,157,44,1) 32%, rgba(0,185,53,1) 100%);
+    background: linear-gradient(180deg, rgba(0, 235, 67, 1) 0%, rgba(0, 157, 44, 1) 32%, rgba(0, 185, 53, 1) 100%);
     border-top-right-radius: 5px;
     border-bottom-right-radius: 8px;
-    width: 8%;
-    height:100%;
+    grid-row: 1 / span 2;
+    grid-column: 1 / span 2;
+    font-family: 'YourCustomFont', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+    color: white;
+    display: block;
+    text-align: center;
+    align-items: center;
+    padding-left: 10px;
 }
 
 .footer-element {
-    width: 10%;
+    background-color: #0055a4;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+    display: block;
+    align-items: center;
+    text-align: center;
+    font-size: 15px;
+    justify-content: center; /* Center horizontally */
 }
 
-.menu-footer > li {
-    display: inline-block;
-    justify-content: flex-start;
-    /* border-right :solid;
-    border-right-width: 0.5px;
-    border-color: #d5e2f7; */
+.footer-element:hover {
+    background-color: #003b81;
 }
