--- a/Front/src/compenents/Chat/TextComposerContainer/TextComposerContainer.css
+++ b/Front/src/compenents/Chat/TextComposerContainer/TextComposerContainer.css
@@ -31,6 +31,24 @@
     border-color: #7483af;
 }
 
+.upper-part-write-text img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+.upper-part-write-text:hover {
+    background-color: rgba(0, 0, 0, 0.5); /* Change background color on hover */
+    position: relative;
+}
+
+.upper-part-write-text:hover img {
+    opacity: 0.7; /* Reduce image opacity on hover */
+}
+
 .middle-part-write-text {
     width: 100%;
     height: 60%;
