--- a/Front/src/compenents/Game/GameMenu/GameMenu.css
+++ b/Front/src/compenents/Game/GameMenu/GameMenu.css
@@ -8,6 +8,11 @@
     src: url(../../../fonts/ErbosDraco.ttf)
 }
 
+@font-face {
+    font-family: kidos;
+    src: url(../../../fonts/KIdDOS-Regular.ttf)
+}
+
 .bg-game {
 	display: block;
 	object-fit: cover;
@@ -61,6 +66,14 @@
     font-size: 150%;
 }
 
+#mustWatchIt {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    right: 20px;
+    bottom: 25px;
+}
+
 #spectate-bg {
     display: grid;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.4);
@@ -108,8 +121,9 @@
 
 .spectate-history {
     position: absolute;
+    flex-wrap: wrap;
     display: flex;
-    justify-content: space-between;
+    gap: 10px 20px;
     margin-top: 40px;
     width: 48vw;
     height: 17vh;
@@ -124,6 +138,119 @@
     margin: 0 2vw;
 }
 
+.spectate-tv {
+    position: relative;
+    width: 200px;
+    height: 150px;
+    margin: 10px 20px;
+    border-radius: 50% / 10%;
+    border: solid 3px white;
+    color: white;
+    text-indent: .1em;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spectate-tv::before {
+    content: '';
+    position: absolute;
+    top: 10%;
+    bottom: 10%;
+    right: -5%;
+    left: -5%;
+    border-radius: 5% / 50%;
+}
+
+.spectate-versus-encours {
+    z-index: 10;
+    width: 70px;
+    height: 70px;
+    position: absolute;
+}
+
+#container-spectate-partieLeft {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%; 
+    height: 100%;
+    /* margin: 20px 0; */
+
+    display: flex;
+    justify-content: center;
+}
+
+#container-spectate-partieRight {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%; 
+    height: 100%;
+    /* margin: 20px 0; */
+
+    display: flex;
+    justify-content: center;
+}
+
+.spectate-playerLeft-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 50% 10%;
+    border-bottom-left-radius: 50% 10%;
+    opacity: 0.9;
+    color: black;
+}
+
+.spectate-playerLeft-img::before {
+    content: '';
+    position: absolute;
+    top: 10%;
+    bottom: 10%;
+    left: -5%;
+    background: inherit;
+    border-top-left-radius: 5% 50%;
+    border-bottom-left-radius: 5% 50%;
+}
+
+.spectate-playerRight-img {
+    position: absolute;
+    top: 0;
+    left: 0%;
+    width: 100%; 
+    height: 100%;
+    object-fit: cover;
+    border-top-right-radius: 50% 10%;
+    border-bottom-right-radius: 50% 10%;
+    opacity: 0.9;
+    color: black;
+}
+
+.spectate-playerRight-img::before {
+    content: '';
+    position: absolute;
+    top: 10%;
+    bottom: 10%;
+    left: -5%;
+    background: inherit;
+    border-top-right-radius: 5% 50%;
+    border-bottom-right-radius: 5% 50%;
+}
+
+.spectate-playerLeft, .spectate-playerRight {
+    position: absolute;
+    margin-top: 100px;
+    font-family: south_park_font;
+    font-size: 70%;
+    color:black;
+    opacity: 1;
+    text-shadow: 0 0 5px #FF0000, 0 0 7px #0000FF;
+}
 
 /********* HISTORIQUE ***********/
 
@@ -360,6 +487,76 @@
     max-width: 100%; 
     line-height: 1em;
 }
+
+.classement-table {
+    position: absolute;
+    width: 70%;
+    border-collapse: collapse;
+    table-layout: fixed;
+    color: #141a39;
+    cursor: default;
+    margin-top: 200px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+  
+  tr {
+    transition: all 0.2s ease-in-out;
+    border-radius: 0.2rem;
+  }
+  
+  tr:not(:first-child):hover {
+    background-color: #fff;
+    transform: scale(1.1);
+    -webkit-box-shadow: 0px 5px 15px 8px #e4e7fb;
+    box-shadow: 0px 5px 15px 8px #e4e7fb;
+  }
+  
+  tr:nth-child(odd) {
+    background-color: #f9f9f9;
+  }
+  
+  td {
+    height: 5rem;
+    font-family: kidos;
+    font-size: 1.8rem;
+    padding: 1rem 2rem;
+    position: relative;
+  }
+  
+  .number {
+    width: 1rem;
+    font-size: 2.2rem;
+    font-weight: bold;
+    text-align: left;
+  }
+  
+  .name {
+    text-align: left;
+    font-size: 1.7rem;
+  }
+  
+  .points {
+    font-weight: bold;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  
+  .points:first-child {
+    width: 10rem;
+  }
+  
+  .gold-medal {
+    height: 3rem;
+    margin-left: 1.5rem;
+  }
+
+
+
+
+
 
 /********* PLAY BUTTON ***********/
 
