--- a/Front/src/compenents/Chat/ConversationListHeader/ConversationListHeader.css
+++ b/Front/src/compenents/Chat/ConversationListHeader/ConversationListHeader.css
@@ -1,7 +1,7 @@
 /* 5% 3% 17% * 0.68  */
-body {
-    font-size: 1vw; /* Adjust base font size for responsiveness */
-}
+/* body {
+    font-size: 1vw; Adjust base font size for responsiveness
+} */
 
 
 .transcendance-messenger {
