--- a/Front/src/compenents/Chat/ChatConversationArea/ChatConversationArea.css
+++ b/Front/src/compenents/Chat/ChatConversationArea/ChatConversationArea.css
@@ -1,8 +1,12 @@
 .chat-conversation-area {
     width: 50%;
     height: 100%;
-    /* background-color: orange; */
-	/* background-image: url("./windows-xp-wallpaper-bliss.jpg"); */
+    background-color: #f5f5f5;
+    background-color: #f5f5f5; /* Example background color */
+    z-index: 1000; /* Adjust the z-index value as needed */
+    overflow-y: auto; /* Enable vertical scrolling if content exceeds height */
+    transform: translateX(${props => (props.isVisible ? '0' : '100%')});
+    transition: transform 0.3s ease-in-out;
 }
 
 
@@ -22,4 +26,3 @@
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
-
