Convo appears need to link it to the back, channels in creation needs front

--- a/Front/src/compenents/Chat/ConversationListHeader/ConversationListHeader.css
+++ b/Front/src/compenents/Chat/ConversationListHeader/ConversationListHeader.css
@@ -115,6 +115,12 @@ body {
     border-radius: 5px;
 }
 
+.Your-profile-pic-topbar {
+    height: 100%;
+    width: 100%;
+    border-radius: 5px;
+}
+
 .user-informations {
     grid-row-start: 13;
     grid-row-end: 42;
