--- a/Front/src/compenents/Chat/ChatConversationArea/ChatConversationArea.css
+++ b/Front/src/compenents/Chat/ChatConversationArea/ChatConversationArea.css
@@ -1,7 +1,9 @@
 .chat-conversation-area {
-    width: 50%;
-    height: 100%;
-    background-color: #f5f5f5;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 50vh;
+    height: 50vh;
     background-color: #f5f5f5; /* Example background color */
     z-index: 1000; /* Adjust the z-index value as needed */
     overflow-y: auto; /* Enable vertical scrolling if content exceeds height */
@@ -11,8 +13,8 @@
 
 
 .individual-convo-main-container {
-    height: 50%;
-    width: 50%;
+    height: 100%;
+    width: 100%;
     background-color: #e4f1f8;
     display: flex;
     flex-direction: column;
