--- a/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
+++ b/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
@@ -47,10 +47,11 @@
 
 .channel-creation-container {
 	position: fixed;
+	display: flex;
+	gap: 10px;  
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	display: flex;
 	flex-direction: column;
 	align-items: center;
 	padding: 20px;
@@ -58,6 +59,15 @@
 	/* Lighter beige background color */
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
+
+.checkboxes-tick {
+	display: flex;
+	justify-content: space-between;
+}
+
+.checkboxes-tick input[type="checkbox"] {
+	/* margin-right: 20px; */
+  }
 
 .channel-creation-container input {
 	width: 100%;
@@ -163,3 +173,4 @@
   .channel-delete-container button:hover {
 	background-color: #f9c0c0; /* Light red background color on hover */
   }
+  
