chat display conversations

--- a/Front/src/compenents/Chat/ConversationContainer/ConversationContainer.css
+++ b/Front/src/compenents/Chat/ConversationContainer/ConversationContainer.css
@@ -83,4 +83,5 @@
     background-color: #FCFDFF;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    overflow-y: auto;
 }
