--- a/Front/src/compenents/Chat/ChatConversationArea/ChatConversationArea.css
+++ b/Front/src/compenents/Chat/ChatConversationArea/ChatConversationArea.css
@@ -4,9 +4,12 @@
     right: 0;
     width: 50vh;
     height: 50vh;
-    background-color: #f5f5f5; /* Example background color */
-    z-index: 1000; /* Adjust the z-index value as needed */
-    overflow-y: auto; /* Enable vertical scrolling if content exceeds height */
+    background-color: #f5f5f5;
+    /* Example background color */
+    z-index: 1000;
+    /* Adjust the z-index value as needed */
+    overflow-y: auto;
+    /* Enable vertical scrolling if content exceeds height */
     transform: translateX(${props => (props.isVisible ? '0' : '100%')});
     transition: transform 0.3s ease-in-out;
 }
@@ -24,7 +27,34 @@
 .navbar-conv {
     height: 13%;
     width: 100%;
-    background-color: skyblue;
+    /* background-color: #bfd1ef; */
+    background-color: #f3f8fe;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+}
+
+.navbar-conv ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    /* justify-content: space-between; */
+    /* Align items horizontally */
+    padding: 0;
+    margin: 0;
+}
+
+.navbar-conv ul li {
+    /* border-style: solid;
+    border-width: 1px;
+    border-radius: 5px; */
+}
+
+#chat_Invite {
+    max-width: 90px;
+}
+#chat_InviteGame {
+    max-width: 70px;
+    /* Ensure images scale down proportionally */
+    height: auto;
+    /* Maintain aspect ratio */
 }
