--- a/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
+++ b/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
@@ -46,18 +46,59 @@
 }
 
 .channel-creation-container {
+	border-radius: 5px;
 	position: fixed;
 	display: flex;
-	gap: 10px;  
+	/* gap: 10px;   */
 	top: 50%;
 	left: 50%;
+	width: 400px;
+	height: 400px;
 	transform: translate(-50%, -50%);
 	flex-direction: column;
 	align-items: center;
-	padding: 20px;
-	background-color: #f9e8c0;
+	padding: 0;
+	margin: 0;
+	/* padding: 20px; */
+	background-color: #E9E8D7;
 	/* Lighter beige background color */
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.channel-creation-navbar {
+	padding: 0;
+	margin: 0;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	width: 100%;
+	height: 9%;
+	background-color: #0057e9;
+	display: flex;
+	flex-direction: row-reverse;
+	align-items: center;
+}
+
+.channel-creation-navbar img {
+    width: 50px;
+    height: 50px;
+}
+
+.channel-creation-form {
+	height: 92%;
+	margin-bottom: 20px;
+	width: 100%;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.channel-creation-form input {
+	width: 100%;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	font-size: 16px;
+	margin-bottom: 10px;
 }
 
 .checkboxes-tick {
