--- a/Front/src/compenents/Game/Game/Game.css
+++ b/Front/src/compenents/Game/Game/Game.css
@@ -27,6 +27,8 @@ body {
 
 #game-bg {
 	text-align: center;
+	width: 100vw;
+    height: 100vh;
 }
 
 #game-player-left {
@@ -76,52 +78,70 @@ body {
 	font-size: 45px;
 }
 
+#game-container {
+	height: 80vh;
+}
+
 #game-terrain {
 	position: absolute;
-    left: 15vw;
     top: 100px;
     width: 70vw;
     height: 60vh;
     color: white;
     z-index: 1;
+	top: 387px; left: 50%;
+	transform: translate(-50%, -50%);
 }
+
+/* BOUTON RETOUR */
 
 #game-return {
 	position: absolute;
-    bottom: 50px;
-    left: 50px;
-    right: 0;
-    font-size: 500%;
+    bottom: 20px;
+    left: 15px;
+    font-size: 300%;
     z-index: 2;
 }
 
-/* PUB */
+/* COMMANDES */
 
-@media (max-width: 1570px) {
-
-	#game-bg2-pub {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
-	
-	#game-bg-pub {
-		border: 1px solid white;
-		position: absolute;
-		width: 30vw;
-		height: 20vh;
-		bottom: 30px;
-	}
-	
-	#game-pub {
-		display: block;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		object-position: top;
-	}
+#game-commands {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
+#game-inner-commands {
+	position: absolute;
+	bottom: 20px;
+	width: 50vw;
+	height: 75px;
+	
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+}
+
+#game-commands-bg {
+	position: absolute;
+	width: 50vw;
+	height: 75px;
+	background-color: grey;
+	opacity: 0.5;
+	min-width: 300px;
+}
+
+.game-icon {
+	width: 30px;
+	z-index: 2;
+}
+
+.game-commands-font {
+	color: rgb(255, 255, 255);
+	font-family: south_park_font;
+	line-height: 100%;
+}
 
 /* HEALTH BAR */
 
