--- a/Front/src/compenents/Chat/TextComposerContainer/TextComposerContainer.css
+++ b/Front/src/compenents/Chat/TextComposerContainer/TextComposerContainer.css
@@ -28,7 +28,7 @@
     border-top-right-radius: 5px;
     border: solid;
     border-width: 1px;
-    border-color: #7483af;
+    /* border-color: #7483af; */
 }
 
 .upper-part-write-text img {
