--- a/Front/src/compenents/Chat/ChatConversationArea/ChatConversationArea.css
+++ b/Front/src/compenents/Chat/ChatConversationArea/ChatConversationArea.css
@@ -4,7 +4,7 @@
     right: 0;
     width: 50vh;
     height: 50vh;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
     /* Example background color */
     z-index: 1000;
     /* Adjust the z-index value as needed */
@@ -12,13 +12,14 @@
     /* Enable vertical scrolling if content exceeds height */
     transform: translateX(${props => (props.isVisible ? '0' : '100%')});
     transition: transform 0.3s ease-in-out;
-}
+    background-image: url('../../../img/chat/channel_wallpaper.png');
 
+}
 
 .individual-convo-main-container {
     height: 100%;
     width: 100%;
-    background-color: #e4f1f8;
+    /* background-color: #e4f1f8; */
     display: flex;
     flex-direction: column;
     border-radius: 5px;
@@ -52,6 +53,7 @@
 #chat_Invite {
     max-width: 90px;
 }
+
 #chat_InviteGame {
     max-width: 70px;
     /* Ensure images scale down proportionally */
