--- a/Front/src/compenents/Chat/ConversationContainer/ConversationContainer.css
+++ b/Front/src/compenents/Chat/ConversationContainer/ConversationContainer.css
@@ -2,11 +2,12 @@
 .conversation-container{ 
     height: 50%;
     width: 100%;
-    background-color: #e4f1f8;
+    /* background-color: #e4f1f8; */
     display: grid;
 
     grid-template-columns: repeat(50, 2%);
 	grid-template-rows: repeat(50, 2%);
+    /* background-image: url('../../../img/chat/channel_wallpaper.png'); */
 }
 
 .display-individual-convo {
@@ -74,6 +75,8 @@
     margin-left: 1%;
     margin-top: 1%;
     margin-bottom: 1%;
+    overflow-y: auto;
+    font-size: 14px;
     background-color: #fffedc;
 }
 
@@ -81,6 +84,7 @@
     width: 100;
     height: 60%;
     background-color: #FCFDFF;
+    opacity: 0.7;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     overflow-y: auto;
