--- a/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
+++ b/Front/src/compenents/Chat/DropdownChannel/DropdownChannels.css
@@ -94,14 +94,28 @@
 
 .channel-creation-form input {
 	width: 100%;
-	padding: 10px;
+	/* padding: 10px; */
 	border: 1px solid #ccc;
 	border-radius: 5px;
 	font-size: 16px;
 	margin-bottom: 10px;
 }
 
+.fiiiirst {
+	height: 20%;
+	width: 80%;
+	margin-left: 10%;
+	background-color: green;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .checkboxes-tick {
+	width: 80%;
+	height: 20%;
+	margin-left: 10%; 
+	background-color: purple;
 	display: flex;
 	justify-content: space-between;
 }
