--- a/Front/src/compenents/Messages/MessageInput.css
+++ b/Front/src/compenents/Messages/MessageInput.css
@@ -8,9 +8,26 @@
     border: 1px solid #E0E0E0;
 }
 
-input {
-	height: 100%;
+.text-area-indiv {
+	display: block;
+    height: 100%;
 	width: 100%;
+	/* min-height: 7%; */
+	overflow: auto;
+	resize: none;
+	line-height: 20px;
+	max-height: 100%;
+	border: none;
+	/* Remove textarea border */
+	background-color: #fff;
+	font-family: Arial, sans-serif;
+	font-size: 14px;
+	opacity: 0.7;
+}
+
+.text-area-indiv::-webkit-scrollbar {
+	display: none;
+	cursor: pointer;
 }
 
 .input-individual-conversation button {
