--- a/Front/src/compenents/Chat/ConversationListSummary/ConversationListSummary.css
+++ b/Front/src/compenents/Chat/ConversationListSummary/ConversationListSummary.css
@@ -16,8 +16,22 @@
     border-bottom-left-radius: 80px;
     border: solid;
     border-color: grey;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     /* background: linear-gradient(180deg, rgba(182,209,238,1) 0%, rgba(176,212,249,1) 3%,
     rgba(248,248,250,1) 20%, rgba(232,238,242,1) 74%, rgba(224,234,239,1) 100%);    border-radius: 5px; */
+}
+.info-conversation-list ul {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+}
+
+.info-conversation-list ul li img{
+    height: 50px;
+    width: 50px;
 }
 
 .display-list-convo {
