--- a/Front/src/compenents/Messages/MessageInput.css
+++ b/Front/src/compenents/Messages/MessageInput.css
@@ -1,17 +1,20 @@
 .input-individual-conversation {
     display: flex; /* Make the content inside the container flex */
-    justify-content: space-between; /* Space evenly between the child elements (input and button) */
+    flex-direction: row;
+	justify-content: space-between; /* Space evenly between the child elements (input and button) */
     align-items: center; /* Center the content vertically */
     background-color: #F5F5F5;
     padding: 10px; /* Add padding around the content */
     border-radius: 5px;
     border: 1px solid #E0E0E0;
+	height: 100%;
+	width: 100%;
 }
 
 .text-area-indiv {
 	display: block;
     height: 100%;
-	width: 100%;
+	width: 95%;
 	/* min-height: 7%; */
 	overflow: auto;
 	resize: none;
@@ -23,6 +26,12 @@
 	font-family: Arial, sans-serif;
 	font-size: 14px;
 	opacity: 0.7;
+}
+
+.text-area-indiv[contenteditable]:empty::before {
+    content: 'Anything to say ?';
+    display: inline-block;
+	cursor: text;
 }
 
 .text-area-indiv::-webkit-scrollbar {
@@ -41,4 +50,8 @@
 
 .input-individual-conversation button:hover {
     background-color: #0056b3;
+}
+
+.textarea {
+	white-space: pre-line;
 }
