--- a/Front/src/compenents/Chat/ConversationListSummary/ConversationListSummary.css
+++ b/Front/src/compenents/Chat/ConversationListSummary/ConversationListSummary.css
@@ -27,11 +27,13 @@
     display: flex;
     flex-direction: row;
     list-style-type: none;
+    width: 20%;
 }
 
 .info-conversation-list ul li img{
-    height: 50px;
-    width: 50px;
+    height: 30px;
+    width: 30px;
+    margin-left: 10px;
 }
 
 .display-list-convo {
