--- a/Front/src/compenents/searchBar/searchBar.css
+++ b/Front/src/compenents/searchBar/searchBar.css
@@ -1,21 +1,24 @@
 .searchBar {
 	display: flex;
 	align-items: center;
+	width: 60%;
 }
 
-input[type="text"] {
+.searchBar-input[type="text"] {
 	font-size: 16px;
+	margin-left: 10%;
+	width: 60%;
 	border: 1px solid #ccc;
 }
-
-button {
-	width: 10%;
+.searchBar-button {
+	width: 30%;
 	height: 100%;
-	font-size: 16px;
+	font-size: 12px;
 	background-color: #84adda;
 	color: #fff;
 	border: none;
 	cursor: pointer;
+	overflow: hidden;
 }
 
 button:hover {
