--- a/Front/src/compenents/Chat/Channels/Channels.css
+++ b/Front/src/compenents/Chat/Channels/Channels.css
@@ -22,6 +22,12 @@
 	background-color: #0054e8;
 }
 
+.channel-conv-pfp {
+	height: 100%;
+    width: 100%;
+    border-radius: 5px;
+}
+
 .channel-name {
 	flex: 1;
 	/* Take available space */
