--- a/Front/src/compenents/Chat/FooterMenu/FooterMenu.css
+++ b/Front/src/compenents/Chat/FooterMenu/FooterMenu.css
@@ -2,28 +2,33 @@
     position: fixed;
     height: 3vh;
     width: 100vw;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    display:   flex;
+    flex-direction: row;
+    align-items: center;
     background-color: #0256ef;
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
 
+.menu-footer li {
+    height: 100%;
+}
+
 .footer-first-element {
     background: linear-gradient(180deg, rgba(0, 235, 67, 1) 0%, rgba(0, 157, 44, 1) 32%, rgba(0, 185, 53, 1) 100%);
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 8px;
-    grid-row: 1 / span 2;
-    grid-column: 1 / span 2;
     font-family: 'YourCustomFont', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1rem;
     font-weight: bold;
     color: white;
     display: block;
+    display:flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     align-items: center;
     padding-left: 10px;
+    width: 6%;
 }
 
 .footer-element {
