--- a/Front/src/compenents/utils/ImportAvatar/ImportAvatar.css
+++ b/Front/src/compenents/utils/ImportAvatar/ImportAvatar.css
@@ -1,12 +1,12 @@
 .import {
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	margin-top: 2vh;
 	margin-bottom: 5vh;
 	height: 10vh;
 	background-color: transparent;
-  }
+	grid-row-start: infos;
+	grid-column: column-start / column-1;
+	place-self: center;
+}
 
   .upload-container {
 	display: flex;
@@ -21,17 +21,7 @@
 	height: 150px;
 	border-radius: 50%;
 	object-fit: cover;
-  }
-
-  .circle {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 150px;
-	height: 150px;
-	border-radius: 50%;
 	border: 5px dashed rgb(71, 37, 5);
-	cursor: pointer;
   }
 
   #appareil {
@@ -41,8 +31,8 @@
 	justify-content: center;
 	width: 40px;
 	height: 40px;
-	margin-top: 65%;
-	margin-left: 90%;
+	margin-top: 70%;
+	margin-left: 70%;
 	border-radius: 50%;
 	border: 3px solid rgb(71, 37, 5);
 	background-color: white;
