--- a/Front/src/compenents/NewProfile/NewProfile.css
+++ b/Front/src/compenents/NewProfile/NewProfile.css
@@ -90,17 +90,15 @@ body {
     border: 1px solid rgba(0, 0, 255, 0);
 }
 
+#np_move_on:hover {
+	transform: rotate(-15deg);
+	transition: all 0.25s ease-in-out;
+}
+
 @media (max-width: 920px) {
 	#welcome {
 		white-space: normal;
 		font-size: 3.5em;
 		line-height: 1em;
-	}
-}
-
-@media (max-width: 1400px) {
-	#move_on {
-		width: 80px;
-		height: 80px;
 	}
 }
