--- a/Front/src/compenents/Chat/FooterMenu/FooterMenu.css
+++ b/Front/src/compenents/Chat/FooterMenu/FooterMenu.css
@@ -17,8 +17,9 @@
 
 .footer-first-element {
     background: linear-gradient(180deg, rgba(0, 235, 67, 1) 0%, rgba(0, 157, 44, 1) 32%, rgba(0, 185, 53, 1) 100%);
-    font-family: 'YourCustomFont', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 0.9rem;
+    font-style: italic;
     font-weight: bold;
     color: white;
     display: block;
@@ -27,7 +28,7 @@
     align-items: center;
     text-align: center;
     align-items: center;
-    padding-left: 10px;
+    padding-right: 10px;
     width: 6%;
 }
 
@@ -37,7 +38,7 @@
     text-align: center;
     padding: 10px;
     cursor: pointer;
-    display: block;
+    display: flex;
     align-items: center;
     text-align: center;
     font-size: 15px;
@@ -46,4 +47,10 @@
 
 .footer-element:hover {
     background-color: #003b81;
+}
+
+#window {
+    height: 30px;
+    width: 30px;
+    margin-right: 4px;
 }
