--- a/Front/src/compenents/Chat/ConversationContainer/ConversationContainer.css
+++ b/Front/src/compenents/Chat/ConversationContainer/ConversationContainer.css
@@ -46,11 +46,15 @@
     border-radius: 5px;
     border-width: 1px;
     border: solid;
+    display:flex;
     /* width: 100%;
     height: 80%; */
 }
 
-
+.profile-pic-receiver img {
+    height: 100%;
+    width: 100%;
+}
 .to-who {
     width: 100%;
     height: 20%;
